update: distributed lock for route seat generating